fix font size on mobile

--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ section {
 
 /* --- Responsive Design --- */
 @media (max-width: 768px) {
-    .hero-content h1 {
+    #home .container h1 {
         font-size: 2.5rem;
     }
 
